updating project java version to 11