@@ -16,6 +16,7 @@ import javax.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -31,7 +32,7 @@ public class DeviceService {
         return deviceRepository.findAllByStatusOrderByPinDesc(DeviceStatus.ACTIVE)
                 .stream()
                 .map(device -> deviceMapper.toDeviceDetailsData(device))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
