@@ -16,6 +16,7 @@ import javax.annotation.Resource;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -46,7 +47,7 @@ class DeviceConfigurationServiceUnitTest {
                         .temperature(device.getTemperature())
                         .status(device.getStatus().toString())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
 
         Mockito.when(deviceRepository.findAllByStatusOrderByPinDesc(DeviceStatus.READY))
                 .thenReturn(List.of(deviceModel));
